--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -27,6 +27,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_strat_5(df: pd.DataFrame, spy: pd.DataFrame, start_date: datetime, capital: int, add_capital: int, window: int):\n",
+    "    \"\"\"Computes complex strategy for buying when volatility is low and sell when vol is high\"\"\"\n",
+    "    date_to_add = pd.to_datetime(start_date) + datetime.timedelta(days=30)\n",
+    "    date_to_take = pd.to_datetime(start_date) + datetime.timedelta(days=30)\n",
+    "\n",
+    "    spy = compute_spy_vol((spy.pct_change()), window)\n",
+    "\n",
+    "    spy.drop([\"SPY\"], axis=1, inplace=True)\n",
+    "    spy.reset_index(inplace=True)\n",
+    "    spy.rename(columns={\"Date\": \"date\"}, inplace=True)\n",
+    "\n",
+    "    # df['buy'] = spy['buy'].values\n",
+    "    # df['std'] = spy['std'].values\n",
+    "    df = pd.merge(df, spy, on=\"date\", how=\"left\")\n",
+    "\n",
+    "    for idx, row in df.iterrows():\n",
+    "        if (row.buy == 1) and (row.date > pd.to_datetime(date_to_add)):\n",
+    "            capital += add_capital\n",
+    "            date_to_add = row[\"date\"] + datetime.timedelta(days=30)\n",
+    "        elif (row.sell == 1) and (row.date > pd.to_datetime(date_to_take)):\n",
+    "            capital *= 0.95\n",
+    "            date_to_take = row[\"date\"] + datetime.timedelta(days=30)\n",
+    "        df.at[idx, \"ret\"] *= capital\n",
+    "    return df\n",
+    "\n",
+    "def compute_spy_vol(df, window):\n",
+    "    df[\"std\"], std_avg = compute_rolling_std(df, window)\n",
+    "    df[\"buy\"] = 0\n",
+    "    df[\"sell\"] = 0\n",
+    "    # print(df['std'].values)\n",
+    "\n",
+    "    for idx, row in df.iterrows():\n",
+    "        if row[\"std\"] * 1.5 > std_avg:\n",
+    "            df.at[idx, \"sell\"] = 1\n",
+    "        elif row[\"std\"] * 0.8 < std_avg:\n",
+    "            df.at[idx, \"buy\"] = 1\n",
+    "        else:\n",
+    "            df.at[idx, \"buy\"] = 0\n",
+    "            df.at[idx, \"sell\"] = 0\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def compute_rolling_std(df, window):\n",
+    "    std_1 = []\n",
+    "    i = 0\n",
+    "    while i < len(df):\n",
+    "        if i < window:\n",
+    "            std_1.append(0)\n",
+    "        else:\n",
+    "            std_1.append(np.std(df.SPY[i - window : i]))\n",
+    "        i += 1\n",
+    "    return std_1, np.mean(np.array(std_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(stocks, start_date, end_date):\n",
+    "            return yf.download(stocks, start=start_date, end=end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "spy = get_data(\"spy\", start_date=\"2022-01-01\", end_date=\"2023-12-31\")\n",
+    "spy = spy[[\"Adj Close\"]]\n",
+    "spy.rename(columns={\"Adj Close\": \"SPY\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns_spy = (1 + spy.pct_change()[1:]).cumprod().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stocks = [\"meta\", \"mc.pa\", \"googl\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stocks.sort()\n",
+    "total_stocks = len(stocks)\n",
+    "weight = [1 / total_stocks] * total_stocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  3 of 3 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = get_data(stocks, start_date=\"2022-01-01\", end_date=\"2023-12-31\")\n",
+    "df = df[\"Adj Close\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cum_returns(stocks: pd.DataFrame, wts: list):\n",
+    "    \"\"\"Returns cumulative returns of the portfolio applying the assigned weights\"\"\"\n",
+    "    weighted_returns = wts * stocks.pct_change()[1:]\n",
+    "    weighted_returns = pd.DataFrame(weighted_returns)\n",
+    "    port_ret = weighted_returns.sum(axis=1)\n",
+    "    return (port_ret + 1).cumprod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns = cum_returns(df, weight).reset_index()\n",
+    "returns.rename(columns={\"Date\": \"date\", 0: \"ret\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"datetime.timedelta\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\march\\OneDrive\\Documentos\\GitHub\\Portfolio-stats\\qa-notebook.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m returns_s5 \u001b[39m=\u001b[39m compute_strat_5(returns,returns_spy\u001b[39m.\u001b[39;49mset_index(\u001b[39m\"\u001b[39;49m\u001b[39mDate\u001b[39;49m\u001b[39m\"\u001b[39;49m),\u001b[39m\"\u001b[39;49m\u001b[39m2022-01-01\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m10000\u001b[39;49m,\u001b[39m500\u001b[39;49m,\u001b[39m60\u001b[39;49m)\n",
+      "\u001b[1;32mc:\\Users\\march\\OneDrive\\Documentos\\GitHub\\Portfolio-stats\\qa-notebook.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_strat_5\u001b[39m(df: pd\u001b[39m.\u001b[39mDataFrame, spy: pd\u001b[39m.\u001b[39mDataFrame, start_date: datetime, capital: \u001b[39mint\u001b[39m, add_capital: \u001b[39mint\u001b[39m, window: \u001b[39mint\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Computes complex strategy for buying when volatility is low and sell when vol is high\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     date_to_add \u001b[39m=\u001b[39m start_date \u001b[39m+\u001b[39;49m datetime\u001b[39m.\u001b[39;49mtimedelta(days\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     date_to_take \u001b[39m=\u001b[39m start_date \u001b[39m+\u001b[39m datetime\u001b[39m.\u001b[39mtimedelta(days\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     spy \u001b[39m=\u001b[39m compute_spy_vol((spy\u001b[39m.\u001b[39mpct_change()), window)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"datetime.timedelta\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "returns_s5 = compute_strat_5(returns,returns_spy.set_index(\"Date\"),\"2022-01-01\",10000,500,60)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
