change in system 5

--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,24 +194,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns_s5 = compute_strat_5(returns,returns_spy.set_index(\"Date\"),\"2022-01-01\",10000,500,365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"datetime.timedelta\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\march\\OneDrive\\Documentos\\GitHub\\Portfolio-stats\\qa-notebook.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m returns_s5 \u001b[39m=\u001b[39m compute_strat_5(returns,returns_spy\u001b[39m.\u001b[39;49mset_index(\u001b[39m\"\u001b[39;49m\u001b[39mDate\u001b[39;49m\u001b[39m\"\u001b[39;49m),\u001b[39m\"\u001b[39;49m\u001b[39m2022-01-01\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m10000\u001b[39;49m,\u001b[39m500\u001b[39;49m,\u001b[39m60\u001b[39;49m)\n",
-      "\u001b[1;32mc:\\Users\\march\\OneDrive\\Documentos\\GitHub\\Portfolio-stats\\qa-notebook.ipynb Cell 12\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_strat_5\u001b[39m(df: pd\u001b[39m.\u001b[39mDataFrame, spy: pd\u001b[39m.\u001b[39mDataFrame, start_date: datetime, capital: \u001b[39mint\u001b[39m, add_capital: \u001b[39mint\u001b[39m, window: \u001b[39mint\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Computes complex strategy for buying when volatility is low and sell when vol is high\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     date_to_add \u001b[39m=\u001b[39m start_date \u001b[39m+\u001b[39;49m datetime\u001b[39m.\u001b[39;49mtimedelta(days\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     date_to_take \u001b[39m=\u001b[39m start_date \u001b[39m+\u001b[39m datetime\u001b[39m.\u001b[39mtimedelta(days\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/march/OneDrive/Documentos/GitHub/Portfolio-stats/qa-notebook.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     spy \u001b[39m=\u001b[39m compute_spy_vol((spy\u001b[39m.\u001b[39mpct_change()), window)\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"datetime.timedelta\") to str"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>ret</th>\n",
+       "      <th>std</th>\n",
+       "      <th>buy</th>\n",
+       "      <th>sell</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>10024.913684</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>10050.856942</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>9837.153170</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-06</td>\n",
+       "      <td>9786.682563</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-07</td>\n",
+       "      <td>9712.109364</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>13370.133258</td>\n",
+       "      <td>0.011085</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>2023-12-05</td>\n",
+       "      <td>13497.829033</td>\n",
+       "      <td>0.011088</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>2023-12-06</td>\n",
+       "      <td>13486.703275</td>\n",
+       "      <td>0.011078</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>2023-12-07</td>\n",
+       "      <td>13836.290668</td>\n",
+       "      <td>0.010960</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>2023-12-08</td>\n",
+       "      <td>13967.831471</td>\n",
+       "      <td>0.010963</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>502 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date           ret       std  buy  sell\n",
+       "0   2022-01-03  10024.913684  0.000000  1.0   0.0\n",
+       "1   2022-01-04  10050.856942  0.000000  1.0   0.0\n",
+       "2   2022-01-05   9837.153170  0.000000  1.0   0.0\n",
+       "3   2022-01-06   9786.682563  0.000000  1.0   0.0\n",
+       "4   2022-01-07   9712.109364  0.000000  1.0   0.0\n",
+       "..         ...           ...       ...  ...   ...\n",
+       "497 2023-12-04  13370.133258  0.011085  0.0   1.0\n",
+       "498 2023-12-05  13497.829033  0.011088  0.0   1.0\n",
+       "499 2023-12-06  13486.703275  0.011078  0.0   1.0\n",
+       "500 2023-12-07  13836.290668  0.010960  0.0   1.0\n",
+       "501 2023-12-08  13967.831471  0.010963  0.0   1.0\n",
+       "\n",
+       "[502 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "returns_s5 = compute_strat_5(returns,returns_spy.set_index(\"Date\"),\"2022-01-01\",10000,500,60)"
+    "returns_s5"
    ]
   },
   {
