update in top15

--- a/top15_year.ipynb
+++ b/top15_year.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,28 +80,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- CERN: No data found, symbol may be delisted\n",
-      "- FISV: No data found, symbol may be delisted\n",
-      "- XLNX: No data found, symbol may be delisted\n",
-      "- DAI.DE: No data found, symbol may be delisted\n",
-      "- DPW.DE: No data found, symbol may be delisted\n",
-      "- STLA.MI: No data found, symbol may be delisted\n",
-      "Top US Stocks:  [('CRWD', 1.6125422669418146), ('AMD', 1.1666667263085886), ('AVGO', 0.8237702835439444), ('DDOG', 0.8083878853682867), ('ADBE', 0.6967692729855371), ('AMZN', 0.687267685916411), ('INTC', 0.6701852350569092), ('CDNS', 0.5828009577694911), ('BKNG', 0.563904963899564), ('GOOG', 0.5584164437676608)]\n",
-      "Top EU Stocks:  [('TELIA1.HE', 1.131657399293819), ('BBVA.MC', 0.482900939821477), ('PHIA.AS', 0.41014705462608403), ('SAP.DE', 0.3825557291764054), ('ISP.MI', 0.3812992359249599), ('SAN.MC', 0.37087693879235417), ('SAF.PA', 0.3560827575723638), ('EOAN.DE', 0.3304880404568682), ('CRG.IR', 0.32537708428328377), ('ENEL.MI', 0.3075273907120374)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "cac_40_tickers = [\n",
+    "    \"AC.PA\", \"AI.PA\", \"AIR.PA\", \"ALO.PA\", \"MT.AS\",\n",
+    "    \"ATO.PA\", \"CS.PA\", \"BNP.PA\", \"EN.PA\", \"CAP.PA\",\n",
+    "    \"CA.PA\", \"ACA.PA\", \"BN.PA\", \"DSY.PA\", \"EL.PA\",\n",
+    "    \"RMS.PA\", \"KER.PA\", \"OR.PA\", \"LR.PA\", \"MC.PA\",\n",
+    "    \"ML.PA\", \"ORA.PA\", \"RI.PA\", \"PUB.PA\", \"RNO.PA\",\n",
+    "    \"SAF.PA\", \"SGO.PA\", \"SAN.PA\", \"SU.PA\", \"GLE.PA\",\n",
+    "    \"STLA.PA\", \"STM.PA\", \"TEP.PA\", \"HO.PA\", \"FP.PA\",\n",
+    "    \"URW.AS\", \"VIE.PA\", \"DG.PA\", \"VIV.PA\", \"WLN.PA\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ibex_35_tickers = [\n",
+    "    \"ACS.MC\", \"ACX.MC\", \"AENA.MC\", \"ALM.MC\", \"AMS.MC\",\n",
+    "    \"ANA.MC\", \"BBVA.MC\", \"BKT.MC\", \"CABK.MC\", \"CLNX.MC\",\n",
+    "    \"ELE.MC\", \"ENG.MC\", \"FER.MC\", \"GRF.MC\", \"IAG.MC\",\n",
+    "    \"IBE.MC\", \"ITX.MC\", \"MEL.MC\", \"MTS.MC\", \"NTGY.MC\",\n",
+    "    \"PHM.MC\", \"REE.MC\", \"REP.MC\", \"ROVI.MC\", \"SAB.MC\",\n",
+    "    \"SAN.MC\", \"SGRE.MC\", \"SLR.MC\", \"SOL.MC\", \"TEF.MC\",\n",
+    "    \"VIS.MC\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import yfinance as yf\n",
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_annual_return(ticker):\n",
     "    stock = yf.Ticker(ticker)\n",
     "    hist = stock.history(period=\"1y\")\n",
@@ -109,7 +136,7 @@
     "        return (hist['Close'].iloc[-1] - hist['Close'].iloc[0]) / hist['Close'].iloc[0]\n",
     "    return None\n",
     "\n",
-    "def top_stocks(markets, n=10):\n",
+    "def top10_stocks(markets):\n",
     "    performances = {}\n",
     "    for market in markets:\n",
     "        for ticker in market:\n",
@@ -118,8 +145,15 @@
     "                performances[ticker] = annual_return\n",
     "    \n",
     "    sorted_stocks = sorted(performances.items(), key=lambda x: x[1], reverse=True)\n",
-    "    return sorted_stocks[:n]\n",
-    "\n",
+    "    return sorted_stocks[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "top_us = top_stocks([nasdaq_100_tickers])\n",
     "top_eu = top_stocks([euro_stoxx_50_tickers])\n",
     "top_uk = top_stocks([ftse_100_tickers])\n",
@@ -131,12 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to get top 5 stocks from a list of tickers\n",
-    "def get_top_5_stocks(tickers):\n",
+    "def get_top_stocks(tickers, n: int = 5):\n",
     "    performances = {}\n",
     "    for ticker in tickers:\n",
     "        annual_return = get_annual_return(ticker)\n",
@@ -145,12 +179,12 @@
     "\n",
     "    # Sort and get top 5\n",
     "    sorted_stocks = sorted(performances.items(), key=lambda x: x[1], reverse=True)\n",
-    "    return [stock[0] for stock in sorted_stocks[:5]]"
+    "    return [stock[0] for stock in sorted_stocks[:n]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -171,25 +205,51 @@
       "- RDSB.L: No data found, symbol may be delisted\n",
       "- RSA.L: No data found, symbol may be delisted\n",
       "- SLA.L: No data found, symbol may be delisted\n",
-      "Portfolio: ['TELIA1.HE', 'BBVA.MC', 'PHIA.AS', 'SAP.DE', 'ISP.MI', 'CRWD', 'AMD', 'AVGO', 'DDOG', 'ADBE', 'RR.L', 'MRO.L', 'CRH.L', 'SGE.L', 'IHG.L']\n"
+      "- REE.MC: No data found, symbol may be delisted\n",
+      "- SGRE.MC: No data found, symbol may be delisted\n",
+      "- STLA.PA: No data found, symbol may be delisted\n",
+      "- STM.PA: No data found, symbol may be delisted\n",
+      "- FP.PA: No data found, symbol may be delisted\n",
+      "- URW.AS: No data found, symbol may be delisted\n",
+      "Portfolio: ['AC.PA', 'ACA.PA', 'ACS.MC', 'ADBE', 'AMD', 'AMZN', 'AVGO', 'BBVA.MC', 'CRH.L', 'CRWD', 'DDOG', 'ISP.MI', 'MRO.L', 'PHIA.AS', 'PUB.PA', 'ROVI.MC', 'RR.L', 'SAP.DE', 'TELIA1.HE']\n"
      ]
     }
    ],
    "source": [
     "# Get top 5 stocks from each index\n",
-    "top_euro_stoxx = get_top_5_stocks(euro_stoxx_50_tickers)\n",
-    "top_nasdaq = get_top_5_stocks(nasdaq_100_tickers)\n",
-    "top_ftse = get_top_5_stocks(ftse_100_tickers)\n",
+    "top_euro_stoxx = get_top_stocks(euro_stoxx_50_tickers)\n",
+    "top_nasdaq = get_top_stocks(nasdaq_100_tickers, 6)\n",
+    "top_ftse = get_top_stocks(ftse_100_tickers, 3)\n",
+    "top_spain = get_top_stocks(ibex_35_tickers, 3)\n",
+    "top_france = get_top_stocks(cac_40_tickers, 3)\n",
     "\n",
     "# Combine into a single portfolio\n",
-    "portfolio = top_euro_stoxx + top_nasdaq + top_ftse\n",
-    "print(\"Portfolio:\", portfolio)"
+    "portfolio = top_euro_stoxx + top_nasdaq + top_ftse + top_spain + top_france\n",
+    "\n",
+    "unique_list = list(set(portfolio))\n",
+    "unique_list.sort()\n",
+    "\n",
+    "print(\"Portfolio:\", unique_list)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
